# serde-encrypt

serde-encrypt/: Cargo.toml
serde-encrypt-core/: Cargo.toml
serde-encrypt-core/src/encrypt/: plain_message_public_key.rs  plain_message_shared_key.rs
serde-encrypt-core/src/encrypt/plain_message_shared_key/: shared_key_core.rs  shared_key_deterministic_core.rs
serde-encrypt-core/src/key/: as_shared_key.rs
