[package]
authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
categories = ["no-std", "cryptography", "encoding"]
description = "Encrypts all the Serialize"
documentation = "https://docs.rs/serde-encrypt-core"
edition = "2018"
keywords = ["libsodium", "xsalsa20poly1305", "x25519", "serde", "serde-encrypt"] # up to 5 keywords, each keyword should have <= 20 chars
license = "MIT OR Apache-2.0"
name = "serde-encrypt-core"
readme = "../README.md"
repository = "https://github.com/laysakura/serde-encrypt"
version = "0.7.0"

[dependencies]
crypto_secretbox = {version = "0.1.1", default-features = false, features = ["chacha20", "alloc"]}
crypto_box = {version = "0.9.1",  features = ["chacha20"]}

rand = {version = "0.8", default-features = false}
rand_chacha = {version = "0.3", default-features = false}

[dev-dependencies]
spin = {version = "0.9", default-features = false, features = ["spin_mutex", "lazy"]}

[features]
default = ["std"]

std = [
  "crypto_secretbox/std",
  "rand_chacha/std",
]
